<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bgf"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CalculatorApp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_any_operation_you_want"
                android:textColor="#7A8089"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="@string/addition"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/substract_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="@string/substraction"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/multply_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="@string/multiplication"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/div_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:text="@string/division"
                android:textColor="@color/white"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>