<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CalculatorApp"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="9dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_the_numbers"
                android:textColor="#7A8089"
                android:textSize="20sp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_Text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num_1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:maxLines="1"
                    android:inputType="number">

                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_Text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num_2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:maxLines="1"
                    android:inputType="number">

                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20dp"
                android:textColor="@color/black"/>

         </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="9dp"
        app:cardElevation="5dp">

        <Button
            android:id="@+id/btn_start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black"
            android:text="@string/calculate"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>







</LinearLayout>